EKS/yaml-files/infogrid-elbs/ingress/02-kube-manifests-rules/02-Nginx-App1-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: njibrigthain100/brigthain:multi-app-latestv3
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: njibrigthain100/brigthain:multi-app-latestv3
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hway-deployment
  labels:
    app: hway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hway
  template:
    metadata:
      labels:
        app: hway
    spec:
      containers:
      - name: hway
        image: njibrigthain100/brigthain:hwv3
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-nodeport-service
  labels:
    app: app
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /app/
spec:
  type: NodePort
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: account-nodeport-service
  labels:
    app: account
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /account/
spec:
  type: NodePort
  selector:
    app: account
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hway-nodeport-service
  labels:
    app: hway
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: hway
  ports:
  - port: 80
    targetPort: 80
