EKS/yaml-files/infogrid-elbs/ingress/02-kube-manifests-rules/03-ALB-Ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app: app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: microservice
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: micorservice # This annotation is used to group multiple ingresses to the same ALB
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    # alb.ingress.kubernetes.io/healthcheck-path: /app/
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:730335294148:certificate/1e081677-3567-4cf2-9739-b11927661038
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    ## Network Security
    alb.ingress.kubernetes.io/security-groups: sg-056e0f9a46dc3782d
    ## External DNS
    external-dns.alpha.kubernetes.io/hostname: microservice.shared.cognitechllc.org
spec:
  ingressClassName: multi-app-ingress-class
  rules:
  - host: microservice.shared.cognitechllc.org
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-nodeport-service
            port:
              number: 80
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: account-nodeport-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hway-nodeport-service
            port:
              number: 80

# You can also create a separate ingress for account service as shown below
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: account-ingress
#   labels:
#     app: account
#   annotations:
#     alb.ingress.kubernetes.io/load-balancer-name: microservice
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/group.name: micorservice
#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
#     alb.ingress.kubernetes.io/healthcheck-port: traffic-port
#     alb.ingress.kubernetes.io/healthcheck-path: /account/
#     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
#     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
#     alb.ingress.kubernetes.io/success-codes: '200'
#     alb.ingress.kubernetes.io/healthy-threshold-count: '2'
#     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
#     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:730335294148:certificate/1e081677-3567-4cf2-9739-b11927661038
#     alb.ingress.kubernetes.io/security-groups: sg-056e0f9a46dc3782d # This is the alb security group to allow inbound traffic on 443
# spec:
#   ingressClassName: multi-app-ingress-class
#   rules:
#   - host: microservice.shared.cognitechllc.org
#     http:
#       paths:
#       - path: /account
#         pathType: Prefix
#         backend:
#           service:
#             name: account-nodeport-service
#             port:
#               number: 80
